--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
-ass HelloJava {
 
-public static void main(String args[]){
 
-System.out.Println(“ I am your Java Program. Thank you! ”);
 
-}
 
-}
 
-ello 
-this is my first type in index .html file
+
+
+
+
+
+
+
+d><title>HTML</title></head>
+
+<body>
+
+	<p> I am your HTML Page. Thank you! </p>
+
+</body>
+
+</html>
+
+Add the below code in index.js file.
+
 
